syntax = "proto3";

package agent.v1;

service ProductAgent {
    rpc ParseProducts (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string json_input = 1;
}

message ProductResponse {
    string ParsedProduct products = 1;
}

message ParsedProduct {
    string name = 1;
    string description = 2;
    string thumbnail = 4;
    repeated string ingredients = 5;
    repeated Retailer retailers = 6;
}

message Retailer {
    string name = 1;
    string link = 2;
    double rating = 3
    string price = 4;
    bool in_stock = 5;
}